// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token streams are stable fixtures body-work token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "bw1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "1@2",
          "2b@3",
        ],
      },
      {
        "id": "bw1-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "bw1-b3",
        "kind": "repeated-combo",
        "repeat": 28,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3b@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "bw1-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1b@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 242,
    "theme": "Find the downstairs line",
  },
  {
    "blocks": [
      {
        "id": "bw2-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2b@0",
          "3b@1",
          "2b@2",
          "rest@3",
        ],
      },
      {
        "id": "bw2-b2",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3b@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "bw2-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@0.5",
          "3b@1",
          "2b@1.5",
        ],
      },
      {
        "id": "bw2-b4",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "rest@3",
        ],
      },
    ],
    "target": 222,
    "theme": "Dig and come back up",
  },
  {
    "blocks": [
      {
        "id": "bw3-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "2@3",
          "1b@4",
          "4b@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "bw3-b2",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3b@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "bw3-b3",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "5b@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "bw3-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@0.5",
          "3b@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 235,
    "theme": "Mix the floors",
  },
  {
    "blocks": [
      {
        "id": "bw4-b1",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "4b@3",
        ],
      },
      {
        "id": "bw4-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "bw4-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6b@1",
          "3b@2",
          "rest@3",
        ],
      },
      {
        "id": "bw4-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.5",
          "5b@1",
          "2@1.5",
        ],
      },
    ],
    "target": 214,
    "theme": "Body finish",
  },
]
`;

exports[`token streams are stable fixtures establish-the-jab-20 token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "jab1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "jab1-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "jab1-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "jab1-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "jab1-b5",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 263,
    "theme": "The jab is home",
  },
  {
    "blocks": [
      {
        "id": "jab2-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
        ],
      },
      {
        "id": "jab2-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "jab2-b3",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "jab2-b4",
        "kind": "repeated-combo",
        "repeat": 28,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 244,
    "theme": "Double and angle",
  },
  {
    "blocks": [
      {
        "id": "jab3-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "1b@3",
          "1@4",
          "2@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "jab3-b2",
        "kind": "repeated-combo",
        "repeat": 27,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "jab3-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1b@2",
          "2@3",
        ],
      },
      {
        "id": "jab3-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 265,
    "theme": "Jab to body and head",
  },
  {
    "blocks": [
      {
        "id": "jab4-b1",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "jab4-b2",
        "kind": "repeated-combo",
        "repeat": 38,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "jab4-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 244,
    "theme": "Own the range",
  },
]
`;

exports[`token streams are stable fixtures heavy-hands token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "hh1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "hh1-b2",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh1-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "hh1-b4",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "hh1-b5",
        "kind": "repeated-combo",
        "repeat": 7,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
    ],
    "target": 240,
    "theme": "Build the power line",
  },
  {
    "blocks": [
      {
        "id": "hh2-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "4@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "hh2-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "hh2-b3",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "hh2-b4",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "hh2-b5",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 300,
    "theme": "Hooks off the line",
  },
  {
    "blocks": [
      {
        "id": "hh3-b1",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh3-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "hh3-b3",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "hh3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "5@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 263,
    "theme": "Power in layers",
  },
  {
    "blocks": [
      {
        "id": "hh4-b1",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
          "2@4",
          "5@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "hh4-b2",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "hh4-b3",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "hh4-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 286,
    "theme": "Heavy finish",
  },
]
`;

exports[`token streams are stable fixtures pace-pusher token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pp1-b1",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pp1-b2",
        "kind": "repeated-combo",
        "repeat": 37,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "pp1-b3",
        "kind": "repeated-combo",
        "repeat": 39,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "rest@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 190,
    "theme": "The one-two ladder",
  },
  {
    "blocks": [
      {
        "id": "pp2-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pp2-b2",
        "kind": "repeated-combo",
        "repeat": 29,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "pp2-b3",
        "kind": "repeated-combo",
        "repeat": 31,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "pp2-b4",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@1",
          "1b@2",
          "1b@3",
        ],
      },
    ],
    "target": 268,
    "theme": "Ladder the double one",
  },
  {
    "blocks": [
      {
        "id": "pp3-b1",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "pp3-b2",
        "kind": "repeated-combo",
        "repeat": 23,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "pp3-b3",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "pp3-b4",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
    ],
    "target": 253,
    "theme": "Ladder the hook",
  },
  {
    "blocks": [
      {
        "id": "pp4-b1",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "2@5",
          "5@6",
          "2@7",
        ],
      },
      {
        "id": "pp4-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pp4-b3",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "pp4-b4",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "5@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pp4-b5",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 364,
    "theme": "All rates at once",
  },
]
`;

exports[`token streams are stable fixtures progressive-buildup token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pb1-b1",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pb1-b2",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "pb1-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "3@1.5",
        ],
      },
    ],
    "target": 254,
    "theme": "Build the entry",
  },
  {
    "blocks": [
      {
        "id": "pb2-b1",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "pb2-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pb2-b3",
        "kind": "repeated-combo",
        "repeat": 28,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
    ],
    "target": 214,
    "theme": "Add the two",
  },
  {
    "blocks": [
      {
        "id": "pb3-b1",
        "kind": "repeated-combo",
        "repeat": 23,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "pb3-b2",
        "kind": "repeated-combo",
        "repeat": 28,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "pb3-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 241,
    "theme": "Add the three",
  },
  {
    "blocks": [
      {
        "id": "pb4-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "2@5",
          "5@6",
          "rest@7",
        ],
      },
      {
        "id": "pb4-b2",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "2@2",
          "3@3",
        ],
      },
      {
        "id": "pb4-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "2@1.5",
          "1@2",
          "6@2.5",
          "3@3",
          "rest@3.5",
        ],
      },
    ],
    "target": 278,
    "theme": "Build the chain",
  },
]
`;

exports[`token streams are stable fixtures pump-and-coast token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "pc1-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pc1-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc1-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "2@0.5",
          "2@1",
          "2@1.5",
        ],
      },
      {
        "id": "pc1-b4",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pc1-b5",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.6666666666666666",
          "1b@1.3333333333333333",
          "1b@2",
        ],
      },
    ],
    "target": 184,
    "theme": "Pump, then breathe",
  },
  {
    "blocks": [
      {
        "id": "pc2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "3@0.5",
          "3@1",
          "3@1.5",
        ],
      },
      {
        "id": "pc2-b2",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc2-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "5@1",
          "5@2",
          "5@3",
        ],
      },
      {
        "id": "pc2-b4",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc2-b5",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 159,
    "theme": "Change the pump",
  },
  {
    "blocks": [
      {
        "id": "pc3-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "2@3",
          "3@4",
          "2@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "pc3-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "pc3-b3",
        "kind": "repeated-combo",
        "repeat": 27,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "pc3-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 238,
    "theme": "Two-page pump",
  },
  {
    "blocks": [
      {
        "id": "pc4-b1",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "pc4-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "pc4-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "pc4-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 212,
    "theme": "Big pump home",
  },
]
`;

exports[`token streams are stable fixtures quick-coast-reset token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qcr1-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "qcr1-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "qcr1-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "2@0.5",
          "2@1",
          "2@1.5",
        ],
      },
      {
        "id": "qcr1-b4",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "qcr1-b5",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "rest@2",
          "rest@3",
        ],
      },
    ],
    "target": 130,
    "theme": "Work, then reset on your feet",
  },
  {
    "blocks": [
      {
        "id": "qcr2-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "qcr2-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qcr2-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "rest@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "qcr2-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qcr2-b5",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 178,
    "theme": "Coast into combinations",
  },
]
`;

exports[`token streams are stable fixtures quick-downstairs token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qdn1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "1@2",
          "2b@3",
        ],
      },
      {
        "id": "qdn1-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2b@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "qdn1-b3",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qdn1-b4",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2b@0",
          "3b@1",
          "2b@2",
          "rest@3",
        ],
      },
    ],
    "target": 175,
    "theme": "Find the floor",
  },
  {
    "blocks": [
      {
        "id": "qdn2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3b@2",
          "2@3",
        ],
      },
      {
        "id": "qdn2-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "qdn2-b3",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3b@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qdn2-b4",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3b@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 290,
    "theme": "Dig and come back up",
  },
]
`;

exports[`token streams are stable fixtures quick-heavy-two token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qh21-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "qh21-b2",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qh21-b3",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qh21-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 261,
    "theme": "Sit down on the straight line",
  },
  {
    "blocks": [
      {
        "id": "qh22-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qh22-b2",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qh22-b3",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "5@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "qh22-b4",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
          "2@4",
          "5@5",
          "2@6",
          "rest@7",
        ],
      },
    ],
    "target": 304,
    "theme": "Hooks with weight",
  },
]
`;

exports[`token streams are stable fixtures quick-hook-line token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qhl1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "qhl1-b2",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qhl1-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qhl1-b4",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
        ],
      },
    ],
    "target": 187,
    "theme": "Hooks off the line",
  },
  {
    "blocks": [
      {
        "id": "qhl2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "qhl2-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "4@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "qhl2-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "qhl2-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 250,
    "theme": "Both hooks",
  },
]
`;

exports[`token streams are stable fixtures quick-jab-school token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qjs1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "qjs1-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "qjs1-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qjs1-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 223,
    "theme": "Touch and return",
  },
  {
    "blocks": [
      {
        "id": "qjs2-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "qjs2-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "qjs2-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "qjs2-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "1@1.3333333333333333",
          "1@2",
        ],
      },
    ],
    "target": 312,
    "theme": "Double and go",
  },
]
`;

exports[`token streams are stable fixtures quick-level-change token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qlc1-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "qlc1-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1b@2",
          "2@3",
        ],
      },
      {
        "id": "qlc1-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1b@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qlc1-b4",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 238,
    "theme": "High, low, high",
  },
  {
    "blocks": [
      {
        "id": "qlc2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "4b@3",
        ],
      },
      {
        "id": "qlc2-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3b@2",
          "2@3",
        ],
      },
      {
        "id": "qlc2-b3",
        "kind": "repeated-combo",
        "repeat": 22,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qlc2-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 232,
    "theme": "Change floors in the phrase",
  },
]
`;

exports[`token streams are stable fixtures quick-one-two token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "q121-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "rest@2",
          "rest@3",
        ],
      },
      {
        "id": "q121-b2",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "q121-b3",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "rest@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "q121-b4",
        "kind": "repeated-combo",
        "repeat": 28,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "rest@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 194,
    "theme": "The pair at three speeds",
  },
  {
    "blocks": [
      {
        "id": "q122-b1",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "q122-b2",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "q122-b3",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "q122-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 314,
    "theme": "Double the lead, keep the two",
  },
]
`;

exports[`token streams are stable fixtures quick-six-count token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "q6c1-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "q6c1-b2",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "6@3",
        ],
      },
      {
        "id": "q6c1-b3",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
          "5@4",
          "6@5",
          "rest@6",
          "rest@7",
        ],
      },
      {
        "id": "q6c1-b4",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 204,
    "theme": "Count to six",
  },
  {
    "blocks": [
      {
        "id": "q6c2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "q6c2-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "2@5",
          "5@6",
          "2@7",
        ],
      },
      {
        "id": "q6c2-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
          "5@4",
          "6@5",
          "rest@6",
          "rest@7",
        ],
      },
      {
        "id": "q6c2-b4",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "6@3",
        ],
      },
    ],
    "target": 200,
    "theme": "The whole phrase",
  },
]
`;

exports[`token streams are stable fixtures quick-southpaw-mirror token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qsm1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qsm1-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "qsm1-b3",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qsm1-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 181,
    "theme": "Orthodox base",
  },
  {
    "blocks": [
      {
        "id": "qsm2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qsm2-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "qsm2-b3",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qsm2-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 181,
    "theme": "Southpaw mirror",
  },
]
`;

exports[`token streams are stable fixtures quick-speed-burst token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qsb1-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "qsb1-b2",
        "kind": "repeated-combo",
        "repeat": 34,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qsb1-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qsb1-b4",
        "kind": "repeated-combo",
        "repeat": 32,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 308,
    "theme": "Fast hands, clean stops",
  },
  {
    "blocks": [
      {
        "id": "qsb2-b1",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "qsb2-b2",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
          "3@2",
          "2@2.5",
          "rest@3",
          "rest@3.5",
        ],
      },
      {
        "id": "qsb2-b3",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qsb2-b4",
        "kind": "repeated-combo",
        "repeat": 34,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 366,
    "theme": "Pages at speed",
  },
]
`;

exports[`token streams are stable fixtures quick-square token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qsq1-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "2@2",
          "3@3",
        ],
      },
      {
        "id": "qsq1-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "qsq1-b3",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "qsq1-b4",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1@4",
          "4@5",
          "3@6",
          "2@7",
        ],
      },
    ],
    "target": 240,
    "theme": "Trace the square",
  },
  {
    "blocks": [
      {
        "id": "qsq2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qsq2-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "4@1",
          "3@2",
          "4@3",
        ],
      },
      {
        "id": "qsq2-b3",
        "kind": "repeated-combo",
        "repeat": 20,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "4@2",
        ],
      },
      {
        "id": "qsq2-b4",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@0.5",
          "3@1",
          "2@1.5",
        ],
      },
    ],
    "target": 276,
    "theme": "Close the square",
  },
]
`;

exports[`token streams are stable fixtures quick-uppercut-lane token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "qul1-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "qul1-b2",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@0.6666666666666666",
          "5@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qul1-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "qul1-b4",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "5@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 189,
    "theme": "Short line up the middle",
  },
  {
    "blocks": [
      {
        "id": "qul2-b1",
        "kind": "repeated-combo",
        "repeat": 12,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "6@3",
        ],
      },
      {
        "id": "qul2-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "6@0",
          "3@1",
          "6@2",
          "3@3",
        ],
      },
      {
        "id": "qul2-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "5@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "qul2-b4",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 191,
    "theme": "Both uppercuts, then finish",
  },
]
`;

exports[`token streams are stable fixtures speed-combos token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "sp1-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "sp1-b2",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp1-b3",
        "kind": "repeated-combo",
        "repeat": 26,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "rest@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp1-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp1-b5",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
    ],
    "target": 256,
    "theme": "Fast hands, clean stops",
  },
  {
    "blocks": [
      {
        "id": "sp2-b1",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "1@3",
          "2@4",
          "3@5",
          "2@6",
          "rest@7",
        ],
      },
      {
        "id": "sp2-b2",
        "kind": "repeated-combo",
        "repeat": 34,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp2-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp2-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
    ],
    "target": 286,
    "theme": "Doubles at pace",
  },
  {
    "blocks": [
      {
        "id": "sp3-b1",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp3-b2",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sp3-b3",
        "kind": "repeated-combo",
        "repeat": 25,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp3-b4",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "2@1.5",
          "3@2",
          "2@2.5",
          "rest@3",
          "rest@3.5",
        ],
      },
      {
        "id": "sp3-b5",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 307,
    "theme": "Pages at speed",
  },
  {
    "blocks": [
      {
        "id": "sp4-b1",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sp4-b2",
        "kind": "repeated-combo",
        "repeat": 24,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "sp4-b3",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "sp4-b4",
        "kind": "repeated-combo",
        "repeat": 30,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 302,
    "theme": "Empty the tank cleanly",
  },
]
`;

exports[`token streams are stable fixtures switch-by-round token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "sw1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sw1-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw1-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sw1-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 177,
    "theme": "Orthodox base",
  },
  {
    "blocks": [
      {
        "id": "sw2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sw2-b2",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "sw2-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw2-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 194,
    "theme": "Southpaw mirror",
  },
  {
    "blocks": [
      {
        "id": "sw3-b1",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
          "1b@4",
          "2@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "sw3-b2",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "sw3-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "3@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "sw3-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "orthodox",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 188,
    "theme": "Orthodox pressure",
  },
  {
    "blocks": [
      {
        "id": "sw4-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "sw4-b2",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@0.6666666666666666",
          "2@1.3333333333333333",
          "3@2",
        ],
      },
      {
        "id": "sw4-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "sw4-b4",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "southpaw",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 201,
    "theme": "Southpaw finish",
  },
]
`;

exports[`token streams are stable fixtures three-round-fundamentals token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "trf1-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "1@2",
          "1@3",
        ],
      },
      {
        "id": "trf1-b2",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
        ],
      },
      {
        "id": "trf1-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "trf1-b4",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.5",
          "1@1",
          "rest@1.5",
        ],
      },
      {
        "id": "trf1-b5",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "trf1-b6",
        "kind": "repeated-combo",
        "repeat": 5,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "3@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "trf1-b7",
        "kind": "repeated-combo",
        "repeat": 5,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "3@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 237,
    "theme": "Build the base",
  },
  {
    "blocks": [
      {
        "id": "trf2-b1",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "1@2",
          "2@3",
          "1b@4",
          "2@5",
          "3@6",
          "2@7",
        ],
      },
      {
        "id": "trf2-b2",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "1b@0.5",
          "1b@1",
          "1b@1.5",
        ],
      },
      {
        "id": "trf2-b3",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2b@1",
          "3@2",
          "rest@3",
        ],
      },
      {
        "id": "trf2-b4",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "trf2-b5",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "4@1",
          "2@2",
          "3@3",
        ],
      },
      {
        "id": "trf2-b6",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1b@0",
          "2@0.6666666666666666",
          "1@1.3333333333333333",
          "2@2",
        ],
      },
    ],
    "target": 290,
    "theme": "Change levels",
  },
  {
    "blocks": [
      {
        "id": "trf3-b1",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "trf3-b2",
        "kind": "repeated-combo",
        "repeat": 10,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "5@1",
          "2@2",
          "3@3",
        ],
      },
      {
        "id": "trf3-b3",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
      {
        "id": "trf3-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@0.6666666666666666",
          "3@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "trf3-b5",
        "kind": "repeated-combo",
        "repeat": 6,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "1@1",
          "2@2",
          "3@3",
          "2@4",
          "5@5",
          "2@6",
          "rest@7",
        ],
      },
    ],
    "target": 262,
    "theme": "Put it together",
  },
]
`;

exports[`token streams are stable fixtures uppercut-clinic token stream snapshot 1`] = `
[
  {
    "blocks": [
      {
        "id": "uc1-b1",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "uc1-b2",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "uc1-b3",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@0.6666666666666666",
          "5@1.3333333333333333",
          "rest@2",
        ],
      },
      {
        "id": "uc1-b4",
        "kind": "repeated-combo",
        "repeat": 15,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "5@0.5",
          "2@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 185,
    "theme": "Find the short line",
  },
  {
    "blocks": [
      {
        "id": "uc2-b1",
        "kind": "repeated-combo",
        "repeat": 13,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "uc2-b2",
        "kind": "repeated-combo",
        "repeat": 16,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@0.6666666666666666",
          "5b@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "uc2-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "5@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "uc2-b4",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 194,
    "theme": "Change the level",
  },
  {
    "blocks": [
      {
        "id": "uc3-b1",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5b@2",
          "2@3",
          "1@4",
          "6b@5",
          "3@6",
          "rest@7",
        ],
      },
      {
        "id": "uc3-b2",
        "kind": "repeated-combo",
        "repeat": 17,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "6@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
      {
        "id": "uc3-b3",
        "kind": "repeated-combo",
        "repeat": 9,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6@1",
          "3@2",
          "2@3",
        ],
      },
      {
        "id": "uc3-b4",
        "kind": "repeated-combo",
        "repeat": 18,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "6@0",
          "5@0.6666666666666666",
          "2@1.3333333333333333",
          "rest@2",
        ],
      },
    ],
    "target": 197,
    "theme": "Pairs and pages",
  },
  {
    "blocks": [
      {
        "id": "uc4-b1",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "2@1",
          "5@2",
          "2@3",
        ],
      },
      {
        "id": "uc4-b2",
        "kind": "repeated-combo",
        "repeat": 14,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "1@0",
          "6b@0.6666666666666666",
          "3@1.3333333333333333",
          "2@2",
        ],
      },
      {
        "id": "uc4-b3",
        "kind": "repeated-combo",
        "repeat": 8,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "2@0",
          "5@1",
          "2@2",
          "rest@3",
        ],
      },
      {
        "id": "uc4-b4",
        "kind": "repeated-combo",
        "repeat": 19,
        "stance": "inherit",
        "targetPunches": null,
        "tokens": [
          "5@0",
          "2@0.5",
          "3@1",
          "rest@1.5",
        ],
      },
    ],
    "target": 193,
    "theme": "Clinic finish",
  },
]
`;
